<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".settings.ui.activity.SettingsFragment">

    <TextView
        style="@style/PageTitle"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SettingsMenu"
        android:layout_marginTop="@dimen/dimens_24dp"
        android:text="@string/black_theme" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareTheApp"
        style="@style/SettingsMenu"
        android:drawableEnd="@drawable/share_light"
        android:text="@string/share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/writeInSupport"
        style="@style/SettingsMenu"
        android:drawableEnd="@drawable/support_light"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreement"
        style="@style/SettingsMenu"
        android:drawableEnd="@drawable/forward_light"
        android:text="@string/user_agreement" />

</LinearLayout>