<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimens_8dp"
    android:theme="@style/Theme.PlaylistMaker">

    <LinearLayout style="@style/TracksLinearLayout">

        <ImageView
            android:id="@+id/track_image"
            style="@style/TracksImage"
            tools:src="@drawable/placeholder" />

        <LinearLayout style="@style/TracksLinearLayout.vertical">

            <TextView
                android:id="@+id/track_name"
                style="@style/TracksText"
                tools:text="@string/player_track_name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/track_artist"
                    style="@style/TracksText.artist"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/player_artist_name" />

                <TextView
                    android:id="@+id/track_time"
                    style="@style/TracksText.time"
                    tools:text="@string/time" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            style="@style/TracksArrow"
            android:layout_marginEnd="@dimen/dimens_12dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>