<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/search_light"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textAllCaps="false"
            app:icon="@drawable/library_light"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textAllCaps="false"
            app:icon="@drawable/settings_light"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

    </LinearLayout>

</LinearLayout>