<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.activity.SearchFragment"
    android:theme="@style/Theme.PlaylistMaker">

        <TextView
            style="@style/PageTitle"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:text="@string/search" />

    <FrameLayout
        style="@style/BaseForSearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/dimens_24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/SearchBar"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_color" />

        <LinearLayout
            android:id="@+id/clearIcon"
            style="@style/BaseForSearchBar"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                style="@style/SetBackground"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical|end"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                app:tint="@color/grey_icon" />
        </LinearLayout>


    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_list" />

    <LinearLayout
        android:id="@+id/search_history_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/search_history_text_view"
            style="@style/SearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_42dp"
            android:gravity="center"
            android:text="@string/you_find" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimens_20sp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history_button"
            style="@style/SearchButton"
            android:layout_marginTop="@dimen/dimens_24dp"
            android:padding="@dimen/dimens_8sp"
            android:text="@string/clear_history"
            android:textAllCaps="false"
            android:textSize="@dimen/dimens_14sp"
            app:cornerRadius="35dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/search_nothing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            style="@style/SearchImage"
            android:src="@drawable/nothing_was_found" />

        <TextView
            style="@style/SearchText"
            android:layout_marginTop="@dimen/dimens_238dp"
            android:text="@string/text_nothing_was_found" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/connect_trouble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            style="@style/SearchImage"
            android:src="@drawable/no_internet" />

        <TextView
            style="@style/SearchText"
            android:layout_marginTop="@dimen/dimens_238dp"
            android:text="@string/connection_trouble" />

        <TextView
            style="@style/SearchText"
            android:layout_marginTop="@dimen/dimens_282dp"
            android:gravity="center"
            android:text="@string/try_again" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimens_346dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_medium"
            android:padding="@dimen/dimens_8sp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/dimens_14sp"
            app:cornerRadius="54dp" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/dimens_44dp"
        android:layout_height="@dimen/dimens_44dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_140dp"
        android:indeterminateTint="@color/track_arrow"
        android:visibility="gone" />

</LinearLayout>