<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createPlaylistFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSecondary"
    tools:context="com.melongame.playlistmaker.media.ui.activity.CreatePlaylistFragment">

    <ImageView
        android:id="@+id/backButton"
        style="@style/BackArrowButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/PageTitle"
        android:layout_marginStart="@dimen/dimens_48dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:text="@string/new_playlist"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/placeForCover"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="@dimen/dimens_0dp"
        android:layout_marginStart="@dimen/dimens_24dp"
        android:layout_marginTop="@dimen/dimens_80dp"
        android:layout_marginEnd="@dimen/dimens_24dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty_photo" />

    <ImageView
        android:id="@+id/playerTrackArtwork"
        android:layout_width="@dimen/dimens_80dp"
        android:layout_height="@dimen/dimens_80dp"
        app:layout_constraintBottom_toBottomOf="@+id/placeForCover"
        app:layout_constraintEnd_toEndOf="@+id/placeForCover"
        app:layout_constraintStart_toStartOf="@+id/placeForCover"
        app:layout_constraintTop_toTopOf="@+id/placeForCover"
        app:srcCompat="@drawable/add_photo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/CreatePlaylistEditText"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginTop="@dimen/dimens_32dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:hint="@string/playlist_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeForCover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_56dp"
            android:paddingStart="@dimen/dimens_16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        style="@style/CreatePlaylistEditText"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:hint="@string/description_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_56dp"
            android:paddingStart="@dimen/dimens_16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createButton"
        style="@style/TextStyle14"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="@dimen/dimens_44dp"
        android:layout_marginStart="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_32dp"
        android:backgroundTint="@color/grey_icon"
        android:insetTop="@dimen/dimens_0dp"
        android:insetBottom="@dimen/dimens_0dp"
        android:text="@string/create_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/dimens_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>